gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail249.d
version https://git-lfs.github.com/spec/v1
oid sha256:3a63adfd39e64e37c6ff0c39ac12d6c09f2f7a90d7f6df1a22691e6f0c61d219
size 254
